--- a/apps/play/tsconfig.json
+++ b/apps/play/tsconfig.json
@@ -19,7 +19,10 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": [
+      "node"
+    ]
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
