--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "serve:api": "nx serve api",
+    "serve:app": "nx serve play --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
@@ -19,13 +21,31 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@nestjs/axios": "0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
+    "@nestjs/typeorm": "^8.0.3",
     "@nrwl/angular": "14.0.5",
+    "angularx-qrcode": "^13.0.15",
+    "axios": "^0.27.2",
+    "fs": "0.0.1-security",
+    "mysql2": "^2.3.3",
+    "ng-zorro-antd": "^13.2.1",
+    "ng-zorro-antd-mobile": "^6.0.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "qs": "^6.10.3",
     "reflect-metadata": "^0.1.13",
+    "router": "^1.3.7",
     "rxjs": "~7.4.0",
+    "swagger-ui-express": "^4.3.0",
     "tslib": "^2.0.0",
+    "typeorm": "^0.2.45",
+    "typeorm-encrypted-column": "0.0.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -47,7 +67,8 @@
     "@nrwl/node": "14.0.5",
     "@nrwl/workspace": "14.0.5",
     "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.35",
+    "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "cypress": "^9.1.0",
