--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^2.3.3",
     "ng-zorro-antd": "^13.2.1",
     "ng-zorro-antd-mobile": "^6.0.0",
+    "ngx-loading": "^2.0.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "qs": "^6.10.3",
