--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playhits",
-  "version": "0.0.0",
+  "version": "0.9.0",
   "license": "MIT",
   "scripts": {
     "ng": "nx",
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
     "@nrwl/angular": "14.0.5",
+    "ajv": "^8.11.0",
     "angularx-qrcode": "^13.0.15",
     "axios": "^0.27.2",
     "fs": "0.0.1-security",
