--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
     "@nrwl/angular": "14.0.5",
@@ -68,6 +69,7 @@
     "@nrwl/nest": "14.0.5",
     "@nrwl/node": "14.0.5",
     "@nrwl/workspace": "14.0.5",
+    "@types/cron": "^2.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "^16.11.35",
     "@types/passport-jwt": "^3.0.6",
