--- a/package.json
+++ b/package.json
@@ -32,13 +32,22 @@
     "@nestjs/typeorm": "^8.0.3",
     "@nrwl/angular": "14.0.5",
     "ajv": "^8.11.0",
+    "angular-highcharts": "^15.0.1",
     "angularx-qrcode": "^13.0.15",
     "axios": "^0.27.2",
+    "chart-angular": "^2.1.8",
+    "chart.js": "^2.9.3",
+    "device-uuid": "^1.0.4",
     "fs": "0.0.1-security",
+    "highcharts": "^10.3.3",
+    "highcharts-angular": "^2.8.0",
+    "i": "^0.3.7",
     "mysql2": "^2.3.3",
     "ng-zorro-antd": "^13.2.1",
     "ng-zorro-antd-mobile": "^6.0.0",
+    "ng2-charts": "^2.4.2",
     "ngx-loading": "^2.0.1",
+    "npm": "^9.4.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "qs": "^6.10.3",
@@ -71,6 +80,7 @@
     "@nrwl/node": "14.0.5",
     "@nrwl/workspace": "14.0.5",
     "@types/cron": "^2.0.0",
+    "@types/device-uuid": "^1.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "^16.11.35",
     "@types/passport-jwt": "^3.0.6",
