add unique user chart

--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,13 @@
     "play-e2e": "apps/play-e2e"
   },
   "styles": [
-    "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+    "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+    "node_modules/bootstrap/dist/css/bootstrap.min.css",
+    "node_modules/bootstrap/dist/css/bootstrap.css"
+  ],
+  "scripts": [
+    "node_modules/jquery/dist/jquery.js",
+    "node_modules/bootstrap/dist/js/bootstrap.js"
   ],
   "assets": [
     {
