--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@nrwl/angular": "14.0.5",
     "ajv": "^8.11.0",
     "angular-highcharts": "^15.0.1",
     "angularx-qrcode": "^13.0.15",
     "axios": "^0.27.2",
+    "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.3.0",
     "chart-angular": "^2.1.8",
     "chart.js": "^2.9.3",
     "device-uuid": "^1.0.4",
@@ -42,6 +45,7 @@
     "highcharts": "^10.3.3",
     "highcharts-angular": "^2.8.0",
     "i": "^0.3.7",
+    "jquery": "^3.5.1",
     "mysql2": "^2.3.3",
     "ng-zorro-antd": "^13.2.1",
     "ng-zorro-antd-mobile": "^6.0.0",
